--- a/jakpajak.com/pajak/informasi/informasipajakpbb.html
+++ b/jakpajak.com/pajak/informasi/informasipajakpbb.html
@@ -96,7 +96,7 @@
                                 </button>
                                 <div class="collapse" id="account-collapse">
                                     <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-                                        <li><a href="#" class="link-dark d-inline-flex text-decoration-none rounded">Profile</a>
+                                        <li><a href="../profile/profil.html" class="link-dark d-inline-flex text-decoration-none rounded">Profile</a>
                                         </li>
                                         <li><a href="#"
                                                 class="link-dark d-inline-flex text-decoration-none rounded">Profile Settings</a>
@@ -115,8 +115,12 @@
     </header>
 
     <main>
-
+        <!--buat bagian utama taruh disini-->
     </main>
+    
+    <footer>
+        <!--jelas buat footer-->
+    </footer>
     
 </body>
 
