--- a/jakpajak.com/indexuser/index2.html
+++ b/jakpajak.com/indexuser/index2.html
@@ -115,7 +115,111 @@
     </header>
     
     <main>
-        
+        <div class="header-3-3 container-xxl mx-auto p-5 position-relative" style="font-family: 'Poppins', sans-serif">
+      <nav class="navbar navbar-expand-lg navbar-light">
+        <button class="navbar-toggler border-0" type="button" data-bs-toggle="modal" data-bs-target="#targetModal-item">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="modal-item modal fade" id="targetModal-item" tabindex="-1" role="dialog"
+          aria-labelledby="targetModalLabel" aria-hidden="true">
+          <div class="modal-dialog" role="document">
+            <div class="modal-content bg-white border-0">
+              <div class="modal-header border-0" style="padding: 2rem; padding-bottom: 0">
+                <a class="modal-title" id="targetModalLabel">
+                  <img style="margin-top: 0.5rem"
+                    src="http://api.elements.buildwithangga.com/storage/files/2/assets/Header/Header3/Header-3-6.png"
+                    alt="" />
+                </a>
+                <button type="button" class="close btn-close text-white" data-bs-dismiss="modal"
+                  aria-label="Close"></button>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo">
+          <ul class="navbar-nav mx-auto mt-2 mt-lg-0">
+            <li class="nav-item my-auto">
+              <a class="nav-link" data-bs-toggle="collapse" href="#collapse" role="button" aria-expanded="false"
+                aria-controls="collapse">
+                <svg width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path fill-rule="evenodd" clip-rule="evenodd"
+                    d="M5.85 1.69346C3.5304 1.69346 1.65 3.57386 1.65 5.89346C1.65 8.21305 3.5304 10.0935 5.85 10.0935C8.1696 10.0935 10.05 8.21305 10.05 5.89346C10.05 3.57386 8.1696 1.69346 5.85 1.69346ZM0.25 5.89346C0.25 2.80066 2.75721 0.293457 5.85 0.293457C8.94279 0.293457 11.45 2.80066 11.45 5.89346C11.45 8.98625 8.94279 11.4935 5.85 11.4935C2.75721 11.4935 0.25 8.98625 0.25 5.89346Z"
+                    fill="#8B9CAF" />
+                  <path fill-rule="evenodd" clip-rule="evenodd"
+                    d="M8.85503 8.89848C9.12839 8.62512 9.57161 8.62512 9.84497 8.89848L14.045 13.0985C14.3183 13.3718 14.3183 13.8151 14.045 14.0884C13.7716 14.3618 13.3284 14.3618 13.055 14.0884L8.85503 9.88843C8.58166 9.61506 8.58166 9.17185 8.85503 8.89848Z"
+                    fill="#8B9CAF" />
+                </svg>
+              </a>
+              <form class="collapse position-absolute form center-search border-0" id="collapse">
+                <div class="d-flex">
+                  <input type="text" class="rounded-full border-0 focus:outline-none" placeholder="Search" />
+                  <button class="btn" type="button">
+                    <svg style="width: 20px; height: 20px" data-bs-toggle="collapse" href="#collapse" role="button"
+                      aria-expanded="false" aria-controls="collapse" fill="none" stroke="#273B56" viewBox="0 0 24 24"
+                      xmlns="http://www.w3.org/2000/svg">
+                      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12">
+                      </path>
+                    </svg>
+                  </button>
+                </div>
+              </form>
+            </li>
+          </ul>
+        </div>
+      </nav>
+      <div class="hr">
+        <hr style="
+							border-color: #F4F4F4;
+							background-color: #F4F4F4;
+							opacity: 1;
+							margin: 0 !important;
+						" />
+      </div>
+
+      <div>
+        <div class="mx-auto d-flex flex-lg-row flex-column hero">
+          <!-- Left Column -->
+          <div
+            class="left-column flex-lg-grow-1 d-flex flex-column align-items-lg-start text-lg-start align-items-center text-center">
+            <h1 class="title-text-big">
+              Apakah<br class="d-lg-block d-none" />
+              <span style="color: #4E91F9">Bayar Pajak</span> Itu<br class="d-lg-block d-none" />
+              Wajib?
+            </h1>
+            <p class="text-caption">
+              Pajak adalah iuran atau pungutan wajib yang harus dibayar oleh rakyat (wajib pajak) kepada negara berdasarkan undang-undang, 
+              dimana uang pajak tersebut akan digunakan untuk kepentingan pemerintah dan kesejahteraan masyarakat umum.<br class="d-sm-block d-none" />
+            </p>
+            <div class="d-flex flex-sm-row flex-column align-items-center mx-auto mx-lg-0 justify-content-center gap-3">
+              <button class="btn btn-get text-white d-inline-flex">
+                Bayar Pajak
+              </button>
+            </div>
+          </div>
+
+          <!-- Right Column -->
+          <div class="right-column d-flex justify-content-center justify-content-lg-start text-center pe-0">
+            <img class="position-absolute d-lg-block d-none hero-right"
+              src="http://api.elements.buildwithangga.com/storage/files/2/assets/Header/Header3/Header-3-2.png"
+              alt="" />
+            <div class="d-flex align-items-end card-outer">
+              <div class="mx-auto d-flex flex-wrap align-items-center">
+                <div class="card border-0 position-relative d-flex flex-column">
+                  <div class="d-flex align-items-center" style="margin-bottom: 1.25rem">
+                    <div>
+                      <img style="margin-right: 1rem"
+                        src="http://api.elements.buildwithangga.com/storage/files/2/assets/Header/Header3/Header-3-3.png"
+                        alt="" />
+                    </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     </main>
 
     <footer>
