body fixed position

--- a/jakpajak.com/indexadmin/pajakadmin/profile/profil.html
+++ b/jakpajak.com/indexadmin/pajakadmin/profile/profil.html
@@ -16,7 +16,7 @@
     <title>Document</title>
 </head>
 
-<body class="gradient-custom-background">
+<body class="gradient-custom-background d-flex flex-column min-vh-100">
     <header>
         <nav class="navbar navbar-dark bg-secondary fixed-top">
             <div class="container-fluid">
