--- a/jakpajak.com/indexuser/pajak/informasi/informasipajakindividu.html
+++ b/jakpajak.com/indexuser/pajak/informasi/informasipajakindividu.html
@@ -15,7 +15,7 @@
     <title>Document</title>
 </head>
 
-<>
+<body class="d-flex flex-column min-vh-100">
     <header>
         <nav class="navbar navbar-dark bg-secondary fixed-top">
             <div class="container-fluid">
