--- a/jakpajak.com/indexadmin/pajakadmin/daftarpajakperusahaan.html
+++ b/jakpajak.com/indexadmin/pajakadmin/daftarpajakperusahaan.html
@@ -94,7 +94,7 @@
         </nav>
     </header>
 
-    <main>
+    <main class="mt-5 mb-5">
         <nav class="mt-5 container-fluid">
             <table class="table table-hover table-striped-columns caption-top">
                 <caption>Berisi daftar pajak perusahaan yang telah diinputkan</caption>
