--- a/jakpajak.com/indexadmin/pajakadmin/profile/profil.html
+++ b/jakpajak.com/indexadmin/pajakadmin/profile/profil.html
@@ -136,7 +136,7 @@
         </nav>
     </header>
 
-    <main class="mt-3">
+    <main class="mt-5 mb-5">
         <section class="vh-100 gradient-custom-background" >
             <div class="container-fluid py-5 h-100">
                 <div class="row d-flex justify-content-center align-items-center h-100">
