--- a/jakpajak.com/indexuser/pajak/informasi/informasipajakperusahaan.html
+++ b/jakpajak.com/indexuser/pajak/informasi/informasipajakperusahaan.html
@@ -114,7 +114,7 @@
         </nav>
     </header>
 
-    <main>
+    <main class="mt-5 mb-5">
         <!--buat bagian utama taruh disini-->
     </main>
     
