add link to signUp.html

--- a/jakpajak.com/index.html
+++ b/jakpajak.com/index.html
@@ -17,12 +17,12 @@
                 <input type="submit" name="" value="As Admin" required><br>
                 
                 <a href="#">Forget your Password?</a><br>
-                <a href="#">Don't have account?</a>
+                <a href="signUp.html">Don't have account?</a>
 
             </form>
         </div>
     </body>
-    
+
 </head>
 
 </html>
