add link to another page

--- a/jakpajak.com/indexuser/homeuser.html
+++ b/jakpajak.com/indexuser/homeuser.html
@@ -45,7 +45,7 @@
             <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
               <li class="border-top"></li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="index2.html">Home</a>
+                <a class="nav-link active" aria-current="page" href="homeuser.html">Home</a>
               </li>
               <li class="border-top"></li>
               <li class="mb-1 text-info">
@@ -55,7 +55,7 @@
                 </button>
                 <div class="collapse" id="dashboard-collapse">
                   <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-                    <li><a href="pajak/daftarpajakindividu.html"
+                    <li><a href="pajak/daftarpajakindividu.php"
                         class="link-dark d-inline-flex text-decoration-none rounded">Daftar Pajak
                         Penghasilan</a>
                     </li>
