--- a/jakpajak.com/indexuser/pajak/informasi/informasipajakperusahaan.html
+++ b/jakpajak.com/indexuser/pajak/informasi/informasipajakperusahaan.html
@@ -44,7 +44,7 @@
                         <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                             <li class="border-top"></li>
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="../../index2.html">Home</a>
+                                <a class="nav-link active" aria-current="page" href="../../homeuser.html">Home</a>
                             </li>
                             <li class="border-top"></li>
                             <li class="mb-1 text-info">
