--- a/jakpajak.com/indexuser/pajak/profile/profil.html
+++ b/jakpajak.com/indexuser/pajak/profile/profil.html
@@ -45,7 +45,7 @@
                         <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                             <li class="border-top"></li>
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="../../index2.html">Home</a>
+                                <a class="nav-link active" aria-current="page" href="../../homeuser.html">Home</a>
                             </li>
                             <li class="border-top"></li>
                             <li class="mb-1 text-info">
@@ -57,7 +57,7 @@
                                 </button>
                                 <div class="collapse" id="dashboard-collapse">
                                     <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-                                        <li><a href="../daftarpajakindividu.html"
+                                        <li><a href="../daftarpajakindividu.php"
                                                 class="link-dark d-inline-flex text-decoration-none rounded">../Daftar
                                                 Pajak
                                                 Penghasilan</a>
