add link to another page

--- a/jakpajak.com/indexuser/pajak/daftarpajakkendaraan.html
+++ b/jakpajak.com/indexuser/pajak/daftarpajakkendaraan.html
@@ -44,7 +44,7 @@
                         <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                             <li class="border-top"></li>
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="../index2.html">Home</a>
+                                <a class="nav-link active" aria-current="page" href="../homeuser.html">Home</a>
                             </li>
                             <li class="border-top"></li>
                             <li class="mb-1 text-info">
@@ -54,7 +54,7 @@
                                 </button>
                                 <div class="collapse" id="dashboard-collapse">
                                     <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-                                        <li><a href="daftarpajakindividu.html" class="link-dark d-inline-flex text-decoration-none rounded">Daftar Pajak
+                                        <li><a href="daftarpajakindividu.php" class="link-dark d-inline-flex text-decoration-none rounded">Daftar Pajak
                                                 Penghasilan</a>
                                         </li>
                                         <li><a href="daftarpajakperusahaan.html" class="link-dark d-inline-flex text-decoration-none rounded">Daftar Pajak
@@ -174,7 +174,7 @@
             </table>
             <div class="d-grid gap-2 col-6 mx-auto">
                 <a class="btn btn-success" type="button" href="inputdata/inputpajakkendaraan.html">Tambah Data</a>
-                <a class="btn btn-warning" type="button" href="../index2.html">Back</a>
+                <a class="btn btn-warning" type="button" href="../homeuser.html">Back</a>
             </div>
         </nav>
     </main>
