--- a/jakpajak.com/indexuser/pajak/daftarpajakpbb.html
+++ b/jakpajak.com/indexuser/pajak/daftarpajakpbb.html
@@ -44,7 +44,7 @@
                         <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                             <li class="border-top"></li>
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="../index2.html">Home</a>
+                                <a class="nav-link active" aria-current="page" href="../homeuser.html">Home</a>
                             </li>
                             <li class="border-top"></li>
                             <li class="mb-1 text-info">
@@ -174,7 +174,7 @@
             </table>
             <div class="d-grid gap-2 col-6 mx-auto">
                 <a class="btn btn-success" type="button" href="inputdata/inputpajakpbb.html">Tambah Data</a>
-                <a class="btn btn-warning" type="button" href="../index2.html">Back</a>
+                <a class="btn btn-warning" type="button" href="../homeuser.html">Back</a>
             </div>
         </nav>
     </main>
