--- a/jakpajak.com/indexuser/pajak/informasi/informasipajakkendaraan.html
+++ b/jakpajak.com/indexuser/pajak/informasi/informasipajakkendaraan.html
@@ -54,7 +54,7 @@
                                 </button>
                                 <div class="collapse" id="dashboard-collapse">
                                     <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-                                        <li><a href="../daftarpajakindividu.html" class="link-dark d-inline-flex text-decoration-none rounded">Daftar Pajak
+                                        <li><a href="../daftarpajakindividu.php" class="link-dark d-inline-flex text-decoration-none rounded">Daftar Pajak
                                                 Penghasilan</a>
                                         </li>
                                         <li><a href="../daftarpajakperusahaan.html" class="link-dark d-inline-flex text-decoration-none rounded">Daftar Pajak
