--- a/jakpajak.com/signUp.html
+++ b/jakpajak.com/signUp.html
@@ -75,48 +75,48 @@
                 <hr size="1px" style="margin: 30px 0px 10px 0px;">
 
                 <div class="account-edit-form-5">
-                    <form action="a.js" class="acc-edit-frm">
+                    <form action="a.js" class="acc-edit-frm" method="POST">
                         <div class="form-1">
                             <div class="inner-form-1">
                                 <p>First Name</p>
-                                <input type="text" id="FirstName" required>
+                                <input type="text" id="FirstName" name="first-name" required>
                             </div>
                             <div class="inner-form-2">
                                 <p>Last Name</p>
-                                <input type="text" id="LastName" required>
+                                <input type="text" id="LastName" name="last-name" required>
                             </div>
                         </div>
                         <div class="form-2">
                             <div class="inner-form-2-1">
                                 <p>Nik</p>
-                                <input type="Nik" required>
+                                <input type="text" name="nik" required>
                             </div>
                             <div class="inner-form-2-2">
                                 <p>Tanggal Lahir</p>
-                                <input type="text" id="TanggalLahir" required>
+                                <input type="text" id="TanggalLahir" name="tgl-lahir" required>
                                 </div>
                             <div class="form-3">
                             <div class="inner-form-3-1">
                                 <p>Email</p>
-                                <input type="email" required>
+                                <input type="email" name="email" required>
                             </div>
                                 <div class="inner-form-3-1">
                                     <p>Address</p>
-                                    <input type="Address" required>
+                                    <input type="Address" name="addres" required>
                                 </div>
                             </div>
                             <div class="form-4">
                                 <div class="inner-form-4-1">
                                     <p>Password</p>
-                                    <input type="email" required>
+                                    <input type="password" name="password" required>
                                 </div>
                                     <div class="inner-form-4-2">
                                         <p>Confirm Password</p>
-                                        <input type="Address" required>
+                                        <input type="password" name="confirm-password" required>
                                     </div>
                                 </div>
                             <div class="save-btn">
-                                <input type="submit" value="Save" class="save-bbtn">
+                                <input type="submit" value="Create Account" name="submit" class="save-bbtn">
                             </div>
                     </form>
                 </div>
