--- a/jakpajak.com/indexuser/homeuser.html
+++ b/jakpajak.com/indexuser/homeuser.html
@@ -66,7 +66,7 @@
                         class="link-dark d-inline-flex text-decoration-none rounded">Daftar Pajak
                         Kendaraan</a>
                     </li>
-                    <li><a href="pajak/daftarpajakpbb.html"
+                    <li><a href="pajak/daftarpajakpbb.php"
                         class="link-dark d-inline-flex text-decoration-none rounded">Daftar pajak
                         Tanah dan Bangunan</a>
                     </li>
