update informasi pajak

--- a/jakpajak.com/indexuser/pajak/informasi/informasipajakindividu.html
+++ b/jakpajak.com/indexuser/pajak/informasi/informasipajakindividu.html
@@ -162,8 +162,8 @@
             <div class="row">
               <div class="col-md-6 col-sm-6">
                 <div class="slide-article">
-                  <h1 class="wow fadeInUp" data-wow-duration="0.5s" data-wow-delay="0.5s">Apakah Bayar Pajak Itu Wajib?</h1>
-                  <p class="wow fadeInUp" data-wow-duration="0.5s" data-wow-delay="0.75s">Pajak adalah iuran atau pungutan wajib yang harus dibayar oleh rakyat (wajib pajak) kepada negara berdasarkan undang-undang, dimana uang pajak tersebut akan digunakan untuk kepentingan pemerintah dan kesejahteraan masyarakat umum</p>
+                  <h1 class="wow fadeInUp" data-wow-duration="0.5s" data-wow-delay="0.5s">Apa itu Pajak Individu (PPh)?</h1>
+                  <p class="wow fadeInUp" data-wow-duration="0.5s" data-wow-delay="0.75s">PPh adalah pajak yang dikenakan kepada orang pribadi atau badan atas penghasilan, berupa keuntungan usaha, gaji, honorarium, hadiah aatu lain sebagainya.</p>
                   <a class="read-more-btn wow fadeInUp" data-wow-duration="1s" data-wow-delay="1s" href="#">Read More</a>
                 </div>
               </div>
