--- a/jakpajak.com/indexuser/pajak/informasi/informasipajakperusahaan.html
+++ b/jakpajak.com/indexuser/pajak/informasi/informasipajakperusahaan.html
@@ -163,7 +163,7 @@
               <div class="col-md-6 col-sm-6">
                 <div class="slide-article">
                   <h1 class="wow fadeInUp" data-wow-duration="0.5s" data-wow-delay="0.5s">Apakah Bayar Pajak Itu Wajib?</h1>
-                  <p class="wow fadeInUp" data-wow-duration="0.5s" data-wow-delay="0.75s">Pajak adalah iuran atau pungutan wajib yang harus dibayar oleh rakyat (wajib pajak) kepada negara berdasarkan undang-undang, dimana uang pajak tersebut akan digunakan untuk kepentingan pemerintah dan kesejahteraan masyarakat umum</p>
+                  <p class="wow fadeInUp" data-wow-duration="0.5s" data-wow-delay="0.75s">Pajak atau perusahaan pajak perusahaan mengacu pada pajak yang dikenakan pada entitas yang dikenakan pajak pada tingkat entitas dalam yurisdiksi tertentu. Pajak tersebut dapat mencakup penghasilan atau pajak lainnya.</p>
                   <a class="read-more-btn wow fadeInUp" data-wow-duration="1s" data-wow-delay="1s" href="#">Read More</a>
                 </div>
               </div>
