--- a/jakpajak.com/indexuser/pajak/informasi/informasipajakpbb.html
+++ b/jakpajak.com/indexuser/pajak/informasi/informasipajakpbb.html
@@ -162,8 +162,8 @@
             <div class="row">
               <div class="col-md-6 col-sm-6">
                 <div class="slide-article">
-                  <h1 class="wow fadeInUp" data-wow-duration="0.5s" data-wow-delay="0.5s">Apakah Bayar Pajak Itu Wajib?</h1>
-                  <p class="wow fadeInUp" data-wow-duration="0.5s" data-wow-delay="0.75s">Pajak adalah iuran atau pungutan wajib yang harus dibayar oleh rakyat (wajib pajak) kepada negara berdasarkan undang-undang, dimana uang pajak tersebut akan digunakan untuk kepentingan pemerintah dan kesejahteraan masyarakat umum</p>
+                  <h1 class="wow fadeInUp" data-wow-duration="0.5s" data-wow-delay="0.5s">Apa itu pajak PBB?</h1>
+                  <p class="wow fadeInUp" data-wow-duration="0.5s" data-wow-delay="0.75s">Pajak Bumi dan Bangunan sebenarnya adalah pungutan wajib atas kepemilikan tanah dan bangunan karena adanya keuntungan maupun kedudukan sosial ekonomi atas perorangan atau badan yang memiliki hak padanya ataupun mendapatkan manfaat dari tanah dan bangunan tersebut.</p>
                   <a class="read-more-btn wow fadeInUp" data-wow-duration="1s" data-wow-delay="1s" href="#">Read More</a>
                 </div>
               </div>
