--- a/jakpajak.com/indexuser/pajak/informasi/informasipajakperusahaan.html
+++ b/jakpajak.com/indexuser/pajak/informasi/informasipajakperusahaan.html
@@ -162,7 +162,7 @@
             <div class="row">
               <div class="col-md-6 col-sm-6">
                 <div class="slide-article">
-                  <h1 class="wow fadeInUp" data-wow-duration="0.5s" data-wow-delay="0.5s">Apakah Bayar Pajak Itu Wajib?</h1>
+                  <h1 class="wow fadeInUp" data-wow-duration="0.5s" data-wow-delay="0.5s">Apa itu Pajak Perusahaan?</h1>
                   <p class="wow fadeInUp" data-wow-duration="0.5s" data-wow-delay="0.75s">Pajak atau perusahaan pajak perusahaan mengacu pada pajak yang dikenakan pada entitas yang dikenakan pajak pada tingkat entitas dalam yurisdiksi tertentu. Pajak tersebut dapat mencakup penghasilan atau pajak lainnya.</p>
                 </div>
               </div>
